[package]
name = "arb-reth-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Stage D.2: the node skeleton. Arbitrum is execute-to-derive (state root only exists after
# execution), so this does NOT use reth's download-then-execute sync pipeline. It follows
# reth's payload-block path: produce, execute, compute trie root, seal, persist via
# save_blocks. Reuses arb_revm STF (Stage E), arb-reth-evm (Stages C/D.1), and
# arb-reth-derive (Stage F).

[dependencies]
arbitrum-alloy-consensus = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", default-features = false, features = ["reth"] }
arb-reth-evm = { path = "../arb-reth-evm", features = ["rpc"] }
arb-revm = { git = "https://github.com/nuntax/arbitrum-revm", rev = "49eb9df91bc79cf9f261c8472587d2de64d9fb43" }

alloy-primitives = { version = "1", default-features = false }
alloy-consensus = { version = "2.0", default-features = false }
alloy-eips = { version = "2.0", default-features = false }
alloy-rpc-types-eth = { version = "2.0", default-features = false }
alloy-rpc-types-engine = { version = "2.0", default-features = false, features = ["serde"] }
alloy-genesis = { version = "2", default-features = false }
alloy-trie = { version = "0.9", default-features = false }
eyre = "0.6.12"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { workspace = true }

# reth node types + storage surface
reth-node-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df", features = ["db-api"] }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-primitives-traits = { version = "0.5.0", default-features = false }

# D.2.2: trie, chain-state, execution types, provider write path
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
revm = { workspace = true }
revm-database = "41.0.0"

# D.2.3: driver (reth BlockBuilder + revm State<StateProviderDatabase>)
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
arbitrum-alloy-sequencer = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102" }

# Stage F.3c: L1-derivation catch-up runtime (SequencerInbox + delayed inbox -> feed).
arb-reth-l1 = { path = "../arb-reth-l1" }
arb-reth-sync = { path = "../arb-reth-sync" }
arb-reth-genesis = { path = "../arb-reth-genesis" }
alloy-provider = { version = "2.0", default-features = false, features = ["reqwest", "reqwest-default-tls"] }

# D.3b: NodeBuilder integration (Node<N> + noop components + custom LaunchNode)
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
alloy-rlp = { workspace = true }

# D.3b.2: custom launcher (trie-db changeset cache, reth tasks, reth-db DatabaseEnv)
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }

# H/#52: boot-wiring (static-file Headers segment + stage checkpoints)
reth-stages-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
# H/#1: launch genesis-acceptance gate (init_genesis_with_settings_and_validate)
reth-db-common = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
tracing = "0.1"
metrics = "0.24"

# D.4: standalone launcher (tokio channels)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
jsonrpsee = { version = "0.26.0", features = ["server", "http-client"] }

# Live sequencer-feed follower (--feed-url): websocket source into the feed channel.
# ws:// (testnode) needs "connect"; wss:// (mainnet relay) needs the rustls TLS root feature.
tokio-tungstenite = { version = "0.28", features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
# rustls 0.23 has both aws-lc-rs and ring backends compiled in (transitively), so it cannot
# auto-select a process-default CryptoProvider; a wss:// connect_async then panics. We install the
# aws-lc-rs provider once at startup (see bin/arb-reth.rs). Direct dep only for that install call.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

# D.3b.4: bin/arb-reth (clap CLI, reth runtime/ctrl-c harness, tracing, node-core)
clap = { version = "4", features = ["derive"] }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }

# D.5: Arbitrum RPC converters (receipt/rpc converters), consumed by the canonical RpcAddOns wiring.
arb-reth-rpc = { path = "../arb-reth-rpc" }
arbitrum-alloy-network = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102" }
arbitrum-alloy-rpc-types = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", features = ["reth-compat"] }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }

# Tier-1 engine-tree driver: now in the arb-reth-engine crate (payload stubs + ArbEngineDriver).
arb-reth-engine = { path = "../arb-reth-engine" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-prune = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
crossbeam-channel = "0.5"

[dev-dependencies]
serde_json = { workspace = true }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df", features = ["test-utils"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df", features = ["test-utils"] }
revm-state = "41.0.0"
tempfile = "3"
arbitrum-alloy-consensus = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", default-features = false, features = ["reth", "k256"] }
# Per-block replay-parity test: seed the real ArbOS genesis block into the test factory.
reth-db-common = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }

# engine_spike / engine: Tier-1 engine-tree deps live in [dependencies] now (used by engine.rs).
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
