[package]
name = "arb-reth-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Arbitrum RPC converters: `ArbReceiptConverter` / `ArbRpcConverter` (surface `gas_used_for_l1`),
# consumed by reth's canonical `RpcAddOns` eth-api builder in `arb-reth-node::addons`.
# Split out of `arb-reth-node`.

[dependencies]
arbitrum-alloy-consensus = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21", default-features = false, features = ["reth"] }
arbitrum-alloy-network = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21" }
arbitrum-alloy-rpc-types = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21", features = ["reth-compat"] }
arb-reth-evm = { path = "../arb-reth-evm", features = ["rpc"] }

alloy-consensus = { version = "2.0", default-features = false }
alloy-primitives = { version = "1", default-features = false }
alloy-rpc-types-eth = { version = "2.0", default-features = false }
eyre = "0.6.12"

reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-primitives-traits = { version = "0.5.0", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df", features = ["db-api"] }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
jsonrpsee = { version = "0.26.0", features = ["server", "http-client"] }
