[package]
name = "arb-reth-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Stage F.3c catch-up runtime: drives `arb-reth-l1`'s SequencerInbox/delayed-inbox readers over L1
# windows (with prefetch) into a feed-message channel, and the `arb-l1-resume.json` checkpoint log
# (`resume`) that makes the walk resumable. Split out of `arb-reth-node`; the fetch/derive primitives
# stay in `arb-reth-l1`, the node just consumes `run_l1_sync`.

[dependencies]
arb-reth-l1 = { path = "../arb-reth-l1" }
arbitrum-alloy-sequencer = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", default-features = false, features = ["std"] }

alloy-primitives = { version = "1", default-features = false }
alloy-provider = { version = "2.0", default-features = false, features = ["reqwest", "reqwest-default-tls"] }
# RPC client + transport retry layer: retries transient L1 RPC failures (5xx/429/timeouts) with
# backoff so a provider hiccup doesn't kill the derivation task.
alloy-rpc-client = { version = "2.1", default-features = false, features = ["reqwest"] }
alloy-transport = { version = "2.1", default-features = false }
eyre = "0.6.12"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"

[dev-dependencies]
reth-db = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f", features = ["test-utils"] }
